# aws-silicon-intel-lakehouse

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  prompts.md  pyproject.toml  requirements.txt
.github/workflows/: ci-data-pipeline.yml  infra-sanity-check.yml  integration_tests.yml  pipeline_ci.yml
dags/: dag_bronze.py  dag_gold.py  dag_silver.py  dag_silver_news.py  dag_silver_taxi.py
docs/: DEVLOG.md  TODO.md  architecture.md  conventions.md  future_improvements.md  infrastructure.md  notes.md  observability.md  prompt_code.md  prompts.md  spark.md  testing.md  troubleshooting.md
docs/adr/: 0001-use-editable-install-for-local-imports.md  0002-transition-to-modular-terraform-architecture.md  0003-change-data-source-to-nyc-transit.md  0003-implement-oop-medallion-ingestors.md  README.md
docs/docs/notes/: observability_vs_auditing.md
docs/notes/: cloud.md  notes.md  spark.md
infra/: bootstrap.sh  dynamodb.tf  iam_policies.tf  locals.tf  main.tf  notifications.tf  outputs.tf  provider.tf  secrets.tf  variables.tf
infra/modules/iam/: main.tf  (+1 more)
src/: main.py  run_pipeline.py
src/config/: catalog.yml  spark_base.py  spark_manager.py  spark_setup.py
src/discovery/: bronze_inspect_news_api.py
src/extract/: bronze_ingestion_news_api.py  bronze_ingestion_reviews.py  bronze_ingestion_taxi.py  news_api_ingestion_bronze.py
src/ingestion/: bronze_ingestion_taxi.py  gold_ingestor.py
src/quality/: silver_validate.py  validate_silver.py
src/transform/: bronze_to_silver.py  silver_transform_pyspark.py  silver_transform_pyspark_amazon_reviews.py  silver_transform_pyspark_news_api.py  silver_transform_pyspark_taxi.py
src/utils/: alert_router.py  data_multiplier.py  logger.py  logging_config.py  observability.py  schema_profiler.py
tests/: test_silver.py  test_silver_transform.py  test_spark.py
tests/fixtures/: sample_news.json
tests/integration/: test_observability.py  test_observability_suite.py
(+11 files in other folders)
