[project]
name = "aws-silicon-intel-lakehouse"
version = "0.1.0"
dependencies = [
  "boto3>=1.42.22",
  "great-expectations>=1.10.0",
  "pyiceberg>=0.10.0",
  "pyspark==3.5.3",
  "pytest>=9.0.2",
  "pytest-spark>=0.8.0",
  "requests>=2.32.5",
  "ruff>=0.14.11",
  "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils", "src/extract"]
